--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -27,9 +27,9 @@ html, body {
     transition: all 0.3s ease;
   }
 .sidebar-link:hover {
-    background-color: #ffffff; /* Light gray hover */
+    background-color: #0d6efd; /* Light gray hover */
     border-radius: 5px;
-    color: rgb(0, 0, 0) !important;
+    color: white !important;
     padding: 5px;
   }
   .sidebar-icon{
